k8s/node-red/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  labels:
    app: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      containers:
        - name: node-red
          image: nodered/node-red
          ports:
            - containerPort: 1880
          volumeMounts:
            - name: node-red-data
              mountPath: /data
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: node-red-data
          hostPath:
            path: /home/felix/node-red-data
        - name: localtime
          hostPath:
            path: /etc/localtime
