k8s/node-red/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: node-red
  labels:
    app: node-red
spec:
  selector:
    app: node-red
  ports:
    - protocol: TCP
      port: 1880
      targetPort: 1880
