k8s/node-red/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-red-internal
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: k8s.lan.aomame.de
spec:
  tls:
    - secretName: nodered-lan-aomame-de-tls
      hosts:
        - nodered.lan.aomame.de
  rules:
    - host: nodered.lan.aomame.de
      http:
        paths:
          - backend:
              serviceName: node-red
              servicePort: 1880
